# ROS-Based-DL-Grasping

./: README.md
FYP_RG/: evaluation_grasp.py  run_cam.py  run_custom.py  test.py  train_k_fold.py  train_network.py
FYP_RG/dept_estimator/: dpt_midas.py
FYP_RG/hardware/: camera_new.py
FYP_RG/models/: HEHERnet_official.py  __init__.py
fyp/: CMakeLists.txt  package.xml
fyp/flask/: app.py  communication.py
fyp/flask/static/: v2.css
fyp/flask/templates/: v2.html  v2_ngrok.html
fyp/launch/: demo_moveit_ur5e.launch  fyp_scence.launch  gazebo_ur5e.launch  setup_robot_ur5e.launch
fyp/rviz/: display.rviz
fyp/script/: FYPRobot.py  moveit.py  moveit_controller_tutorial.py  robot_server.py
fyp/srv/: RobotServer.srv
fyp_new_cfg/: CMakeLists.txt  package.xml
fyp_new_cfg/config/: fake_controllers.yaml  fyp_robot.srdf  gazebo_fyp_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
fyp_new_cfg/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  (+1 more)
gazebo_scene_manipulation/: CMakeLists.txt  package.xml
grasp_gen/: CMakeLists.txt  package.xml  setup.py
kinect_cam/: CMakeLists.txt  camera_tutorial.world  kinect.urdf.xacro  kinect_scene.urdf.xacro  package.xml
(+76 files in other folders)
